force-app/main/default/objects/Repair_Instruction_Tranlation__c/Repair_Instruction_Tranlation__c.object-meta.xml
<CustomObject>
    <label>Repair Instruction Tranlation</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repair Instructions Tranlations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>