force-app/main/default/objects/Repair_Instruction_Tranlation__c/fields/Client_Translated_Instruction_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Translated_Instruction_Name__c</fullName>
    <label>Translated Instruction Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>