force-app/main/default/objects/Repair_Instruction_Tranlation__c/fields/Instruction_Code__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Code__c</fullName>
    <label>Instruction Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>