force-app/main/default/objects/Repair_Instruction_Tranlation__c/fields/Instruction_Key__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Key__c</fullName>
    <externalId>true</externalId>
    <label>Instruction Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>