force-app/main/default/objects/Repair_Instruction_Tranlation__c/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <label>LanguageLocaleKey</label>
    <length>10</length>
    <type>Text</type>
</CustomField>