force-app/main/default/objects/Repair_Instruction_Tranlation__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <label>Local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>