force-app/main/default/objects/Repair_Instruction_Tranlation__c/fields/Translated_Instruction_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Instruction_Name__c</fullName>
    <label>Technical Instruction name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>